- remove javaee.web-api dependency due to conflict other dependencies - instead of using some other dependencies - flattern dependencies - add more enforcer rules